# get_insight

./: main.py  pyproject.toml  requirements.txt
notebook/: test.ipynb
notebook/faiss_index/: index.faiss  index.pkl
