[project]
name = "get-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.1",
    "gitpython>=3.1.45",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "uvicorn[standard]>=0.38.0",
]
